--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,16 +1,16 @@
 .order-enter {
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
   -webkit-transform: translateX(-120%);
           transform: translateX(-120%);
   max-height: 0;
   padding: 0 !important;
 }
 .order-enter.order-enter-active {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
   max-height: 60px;
   padding: 2rem 0 !important;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 .order-leave {
   -webkit-transition: all 0.5s;
@@ -19,14 +19,14 @@
           transform: translateX(0);
 }
 .order-leave.order-leave-active {
-  max-height: 0;
-  padding: 0;
   -webkit-transform: translateX(120%);
           transform: translateX(120%);
+  max-height: 0;
+  padding: 0;
 }
 .count-enter {
-  -webkit-transition: all 0.25s;
-  transition: all 0.25s;
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
 }
@@ -35,8 +35,8 @@
           transform: translateY(0);
 }
 .count-leave {
-  -webkit-transition: all 0.25s;
-  transition: all 0.25s;
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
   position: absolute;
   left: 0;
   bottom: 0;
@@ -181,11 +181,13 @@ input[disabled] {
 }
 input[type=checkbox],
 input[type=radio] {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 0;
 }
 input[type=search] {
   -webkit-appearance: textfield;
+  -webkit-box-sizing: content-box;
   box-sizing: content-box;
 }
 input[type=search]::-webkit-search-cancel-button,
@@ -219,6 +221,7 @@ input::-moz-focus-inner {
   height: 0;
 }
 * {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 html {
@@ -323,7 +326,8 @@ header.top h3:after {
   display: flex;
   height: 90vh;
   max-width: 1500px;
-  margin: 5vh auto 0;
+  margin: 0 auto;
+  margin-top: 5vh;
   -webkit-perspective: 1000px;
           perspective: 1000px;
   -webkit-transform-style: preserve-3d;
@@ -339,7 +343,8 @@ header.top h3:after {
   background: #fff;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
-  box-shadow: 0 5px 5px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0 5px 5px rgba(0,0,0,0.1);
+          box-shadow: 0 5px 5px rgba(0,0,0,0.1);
   overflow: scroll;
 }
 .catch-of-the-day > *:first-child {
